# Pseudo3dGame

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Pseudo3DGame  README.md
data/config/: playerConfig.ini  windowConfig.ini  worldConfig.ini
src/: Camera.cpp  Camera.h  IDrawble.h  Managers.h  Precompiler.cpp  Precompiler.h  ResourceManager.cpp  ResourceManager.h  Settings.h  Vector.cpp  Vector.h  World.cpp  World.h  main.cpp
src/2DFigures/: Circle.cpp  Circle.h  Cube.cpp  Cube.h  Object2D.cpp  Object2D.h
src/Core/: Drawer.cpp  Drawer.h  Engine.cpp  Engine.h  Painter.cpp  Painter.h  ResourceManager.cpp  ResourceManager.h
src/Core/Entities/: Camera.cpp  Camera.h  World.cpp  World.h
src/Core/Entities/2DFigures/: Circle.cpp  Circle.h  Cube.cpp  Cube.h  Object2D.cpp  Object2D.h
src/Core/Entities/Loaders/: WorldLoader.cpp  WorldLoader.h
src/Core/Helper/: ConfigParser.cpp  ConfigParser.h  Vector.cpp  Vector.h
src/Core/Helper/Holders/: Singleton.h
src/Core/Managers/: IManager.h  ResourceManager.cpp  ResourceManager.h
src/Core/UI/Menu/: Menu.cpp  Menu.h
src/Entities/: Camera.cpp  Camera.h  World.cpp  World.h
src/Entities/2DFigures/: Circle.h  Cube.h  Object2D.cpp  Object2D.h
